<resources>
    <string name="app_name">ImageProcessor</string>

    <!--activity_main.xml-->
    <string name="image_btn_content_description">image button</string>
    <string name="rotate">rotate</string>
    <string name="invert_colors">invert colors</string>
    <string name="mirror_image">mirror image</string>

    <string name="select_action">Select action</string>
    <string name="pic_from_gallery">Choose a picture from gallery</string>
    <string name="capture_from_camera">Capture a photo from camera</string>
    <string name="load_from_URL">Load from URL</string>
    <string name="permissions_required">Permissions are required for this app</string>
    <string name="mandatory_permissions_warning">You need to give some mandatory permissions to continue. Do you want to go to app settings?</string>

    <string name="error">Error occurred</string>
    <string name="reuse">Reuse</string>
    <string name="delete">Delete</string>
    <string name="what_do_you_want_to_do">What do you want to do</string>

    <string name="wrong_url">Wrong URL!</string>
</resources>
