<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="270dp"
              android:layout_height="wrap_content"
              android:divider="@drawable/dialog_divider_horizontal"
              android:orientation="vertical"
              android:showDividers="middle">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:text="@string/select_action"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="15dp"/>

    <TextView
            android:id="@+id/pic_gallery_tv"
            style="@style/DialogButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/pic_from_gallery"/>

    <TextView
            android:id="@+id/capture_camera_tv"
            style="@style/DialogButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/capture_from_camera"/>

    <TextView
            android:id="@+id/load_URL_tv"
            style="@style/DialogButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/load_from_URL"/>
</LinearLayout>