<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="270dp"
              android:layout_height="wrap_content"
              android:divider="@drawable/dialog_divider_horizontal"
              android:orientation="vertical"
              android:showDividers="middle">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:text="@string/what_do_you_want_to_do"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="15dp"/>

    <TextView
            android:id="@+id/reuse_tv"
            style="@style/DialogButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/reuse"/>

    <TextView
            android:id="@+id/delete_tv"
            style="@style/DialogButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/delete"/>
</LinearLayout>